src/runtime/tests/data/negative/assign-error-field.hsh
let error = std.error("something bad happened", nil)
error.context = "oops..."
